--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,8 @@ dependencies = [
     "zss",
     "protobuf==3.20",
     "sentence_transformers",
+    "vllm==0.6.6.post1",
+    "latex2sympy2"
 ]
 
 [project.optional-dependencies]
