--- a/lmms_eval/tasks/mathvision/mathvision_testmini.yaml
+++ b/lmms_eval/tasks/mathvision/mathvision_testmini.yaml
@@ -1,7 +1,7 @@
 dataset_path: MathLLMs/MathVision
 dataset_kwargs:
   token: True
-task: "mathvision_test"
+task: "mathvision_testmini"
 test_split: testmini
 output_type: generate_until
 doc_to_visual: !function utils.mathvision_doc_to_visual
@@ -21,4 +21,7 @@ metric_list:
 
 lmms_eval_specific_kwargs:
   default:
-    shot_type: "reason-first" # can be "reason-first", "solution", "step-by-step"
+    shot_type: "step-by-step" # can be "reason-first", "solution", "step-by-step"
+    shot: 0
+    use_caption: False
+    use_ocr: False
