--- a/lmms_eval/tasks/mathvision/mathvision_testmini.yaml
+++ b/lmms_eval/tasks/mathvision/mathvision_testmini.yaml
@@ -8,19 +8,20 @@ doc_to_visual: !function utils.mathvision_doc_to_visual
 doc_to_text: !function utils.mathvision_doc_to_text
 doc_to_target: "answer"
 generation_kwargs:
-  max_new_tokens: 1024
+  max_new_tokens: 4096
   temperature: 0
   top_p: 1.0
   num_beams: 1
   do_sample: false
 process_results: !function utils.mathvision_process_results
 metric_list:
-  - metric: mathvision_standard_eval
-    aggregation: !function utils.mathvision_aggregate_results_eval
+  - metric: submission
+    aggregation: !function utils.mathvision_aggregate_results
     higher_is_better: true
 
 lmms_eval_specific_kwargs:
   default:
-    prompt_format: solution
-    mc_prompt: "Answer the question with the option's letter from the given choices directly."
-    short_answer_prompt: "Answer the question with a number directly."
+    shot_type: "step-by-step" # can be "reason-first", "solution", "step-by-step"
+    shot: 0
+    use_caption: False
+    use_ocr: False
